welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:2: error: unclosed quoted identifier
  else if (tea>=2*candy `|| candy>=2*tea){return 2}
                        ^teaParty:2: error: illegal start of statement
  else if (tea>=2*candy `|| candy>=2*tea){return 2}
  ^