welcome.lessons.welcome.bat.bool2.TeaParty.scala.code
def teaParty(tea:Int, candy:Int): Int = {
  else if (tea>=2*candy `|| candy>=2*tea){return 2}
   else if (tea>=5 && candy >= 5){return 1}
  else {return 0}}